Fix padding consistency with buttons & icon alignment issues.

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,5 +1,6 @@
 .btn {
   display: inline-block;
+  padding: 0.375em 0.75em 0.42em;
 
   background-color: var(--color-brand);
   border-radius: 8px;
@@ -14,6 +15,12 @@
   background-color: var(--color-brand-dark);
   color: #fff;
   text-decoration: none;
+}
+
+.btn--light {
+  background-color: var(--color-brand-light);
+  border: 3px solid var(--color-brand);
+  color: var(--color-brand-dark);
 }
 
 .btn--ghost {
